--- a/Malnapp/app/src/main/res/layout/activity_signup_screen.xml
+++ b/Malnapp/app/src/main/res/layout/activity_signup_screen.xml
@@ -4,6 +4,124 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Signup_screen">
+    tools:context=".Login">
 
+  <TextView
+      android:id="@+id/textView3"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Maln"
+      android:textColor="#3744FF"
+      android:textSize="48sp"
+      app:layout_constraintBottom_toTopOf="@+id/unameEdt"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.509"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.592" />
+
+  <EditText
+      android:id="@+id/unameEdt"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="100dp"
+      android:layout_marginEnd="101dp"
+      android:layout_marginBottom="28dp"
+      android:ems="10"
+      android:inputType="textPersonName"
+      app:layout_constraintBottom_toTopOf="@+id/nameEdt"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="1.0"
+      app:layout_constraintStart_toStartOf="parent"
+      tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
+  <EditText
+      android:id="@+id/nameEdt"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="100dp"
+      android:layout_marginEnd="101dp"
+      android:layout_marginBottom="28dp"
+      android:ems="10"
+      android:inputType="textPersonName|text"
+      app:layout_constraintBottom_toTopOf="@+id/lnameEdt"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="1.0"
+      app:layout_constraintStart_toStartOf="parent"
+      tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
+  <TextView
+      android:id="@+id/textView6"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Name:"
+      app:layout_constraintBottom_toTopOf="@+id/nameEdt"
+      app:layout_constraintStart_toStartOf="@+id/nameEdt" />
+
+  <EditText
+      android:id="@+id/lnameEdt"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="100dp"
+      android:layout_marginEnd="101dp"
+      android:layout_marginBottom="28dp"
+      android:ems="10"
+      android:inputType="textPersonName|text"
+      app:layout_constraintBottom_toTopOf="@+id/passEdt"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="1.0"
+      app:layout_constraintStart_toStartOf="parent"
+      tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
+  <TextView
+      android:id="@+id/textView7"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Lastname:"
+      app:layout_constraintBottom_toTopOf="@+id/lnameEdt"
+      app:layout_constraintStart_toStartOf="@+id/lnameEdt" />
+
+  <EditText
+      android:id="@+id/passEdt"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="100dp"
+      android:layout_marginEnd="101dp"
+      android:layout_marginBottom="52dp"
+      android:ems="10"
+      android:inputType="textPassword"
+      android:minHeight="48dp"
+      app:layout_constraintBottom_toTopOf="@+id/confirmBtn"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="1.0"
+      app:layout_constraintStart_toStartOf="parent"
+      tools:ignore="SpeakableTextPresentCheck" />
+
+  <Button
+      android:id="@+id/confirmBtn"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="158dp"
+      android:layout_marginEnd="159dp"
+      android:layout_marginBottom="100dp"
+      android:text="Confirm"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent" />
+
+  <TextView
+      android:id="@+id/textView2"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Username:"
+      app:layout_constraintBottom_toTopOf="@+id/unameEdt"
+      app:layout_constraintStart_toStartOf="@+id/unameEdt" />
+
+  <TextView
+      android:id="@+id/textView5"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Password:"
+      app:layout_constraintBottom_toTopOf="@+id/passEdt"
+      app:layout_constraintStart_toStartOf="@+id/passEdt" />
 </androidx.constraintlayout.widget.ConstraintLayout>
