--- a/Malnapp/app/src/main/res/xml/network_security_config.xml
+++ b/Malnapp/app/src/main/res/xml/network_security_config.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</PreferenceScreen>
+<network-security-config>
+    <base-config>
+        <trust-anchors>
+            <certificates src="@raw/localhost"/>
+            <certificates src="system"/>
+        </trust-anchors>
+    </base-config>
+</network-security-config>
